--- a/clase21- auth3rd/src/views/register.handlebars
+++ b/clase21- auth3rd/src/views/register.handlebars
@@ -14,6 +14,6 @@
     <input type="submit">
 </form>
 
-<p>Registrate ! <a href="/login">Logueate :)</a></p>
+<p>Registrate ! <a href="/login">Logueate</a></p>
 
 <script src="/js/register.js"></script>
